# CSharpSocket

./: CSharpSocket.sln
CSharpSocket/: CSharpSocket.csproj  SKTcpSocket.cs
CSharpSocket/Properties/: AssemblyInfo.cs
CSharpSocketCppExport/: CSharpSocketCppExport.cpp  CSharpSocketCppExport.vcxproj  CSharpSocketCppExport.vcxproj.filters
DebugTestCpp/: CMakeLists.txt  DebugTestCpp.vcxproj  main.cpp
TestCppImport/: TestCppImport.vcxproj  main.cpp
